--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,7 +2,7 @@
 # defaults file for panxatony.freeipa-client
 
 #server FreeIPA variables
-freeipa_server_ip: 192.168.237.11
+freeipa_server_ip: 192.168.71.138
 freeipa_hostname: ipasrv.cs9demo.lab
 freeipa_alias: ipasrv
 freeipa_domain_search: cs9demo.lab
@@ -11,10 +11,10 @@ freeipa_ldap_search_base: "dc=cs9demo,dc=lab"
 freeipa_ldap_user_search_base: "cn=users,dc=cs9demo,dc=lab"
 freeipa_ldap_group_search_base: "cn=groups,dc=cs9demo,dc=lab"
 freeipa_ldap_default_bind_dn: "uid=admin,cn=users,dc=cs9demo,dc=lab"
-freeipa_ldap_uri: "ldaps://ipasrv.cloud-cell02.audi.vwg/"
+freeipa_ldap_uri: "ldaps://ipasrv.cs9demo.lab/"
 freeipa_ldap_sudo_search_base: "ou=SUDOers,dc=cs9demo,dc=lab"
 freeipa_user_homedir: "/home"
 
 #client FreeIPA variables
 freeipa_principal_user: admin
-freeipa_principal_password: verySecret
+freeipa_principal_password: secretPass
