--- a/tasks/set-resolv.conf.yml
+++ b/tasks/set-resolv.conf.yml
@@ -10,3 +10,5 @@
 
 - name: Creates the /etc/resolv.conf file 
   template: src=etc-resolv.conf.j2 dest=/etc/resolv.conf
+  tags:
+    - freeipa-client
