--- a/tasks/set-resolv.conf.yml
+++ b/tasks/set-resolv.conf.yml
@@ -10,5 +10,7 @@
 
 - name: Creates the /etc/resolv.conf file 
   template: src=etc-resolv.conf.j2 dest=/etc/resolv.conf
+  become: yes
+  become_user: root
   tags:
     - freeipa-client
