--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 galaxy_info:
-  author: Panxatony
+  author: Lars Hunold
   description: 
   company: SexyHosting
   # If the issue tracker for your role is not on github, uncomment the
